--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #ff2f2f;
+  background-color: #59ff2f;
 }
 
 .logo {
@@ -26,7 +26,7 @@ body {
   border: 2px solid #fff;
   border-radius: 20px;
   color: white;
-  background-color: #ff2f2f;
+  background-color: #71ff2f;
   font-size: 16px;
   font-weight: 500;
   cursor: pointer;
@@ -35,7 +35,7 @@ body {
 
 .btn:hover {
   background-color: #fff;
-  color: #ff2f2f;
+  color: #40ff2f;
 }
 
 .no-users {
